force-app/main/default/objects/Google_Address_Finder_Setting__mdt/Google_Address_Finder_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Settings for the GoogleAddressFinderEnhanced Component</description>
    <label>Google Address Finder Setting</label>
    <pluralLabel>Google Address Finder Settings</pluralLabel>
</CustomObject>