force-app/main/default/objects/Google_Address_Finder_Setting__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>Google API Key to be able to use the APIs.
Help: https://developers.google.com/maps/documentation/places/web-service/get-api-key</description>
    <inlineHelpText>Google API Key to be able to use the APIs.</inlineHelpText>
    <label>API Key</label>
    <type>TextArea</type>
</CustomField>