force-app/main/default/objects/Google_Address_Finder_Setting__mdt/fields/Place_Autocomplete_URL__c.field-meta.xml
<CustomField>
    <fullName>Place_Autocomplete_URL__c</fullName>
    <description>URL for the Google Place Autocomplete Endpoint. 
Help: https://developers.google.com/maps/documentation/places/web-service/autocomplete</description>
    <inlineHelpText>URL for the Google Place Autocomplete Endpoint.</inlineHelpText>
    <label>Place Autocomplete URL</label>
    <type>Url</type>
</CustomField>