force-app/main/default/objects/Google_Address_Finder_Setting__mdt/fields/Place_Details_URL__c.field-meta.xml
<CustomField>
    <fullName>Place_Details_URL__c</fullName>
    <description>URL for the Google Place Details Endpoint. 
Help: https://developers.google.com/maps/documentation/places/web-service/details</description>
    <inlineHelpText>URL for the Google Place Details Endpoint.</inlineHelpText>
    <label>Place Details URL</label>
    <type>Url</type>
</CustomField>